--- a/viewer/package.json
+++ b/viewer/package.json
@@ -22,5 +22,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "prop-types": "^15.6.2"
+  }
 }
