--- a/viewer/package.json
+++ b/viewer/package.json
@@ -25,6 +25,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.6.2",
+    "react-test-renderer": "^16.6.3"
   }
 }
